--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="A Todo list Application" />
     <meta name="author" content="Prajwal Gautam" />
     <title>Todo app</title>
+    <link rel="icon" href="./icon.png" type="image/png">
   </head>
   <body>
     <div id="root"></div>
